--- a/FigLeaf.UI/MainWindow.xaml
+++ b/FigLeaf.UI/MainWindow.xaml
@@ -83,15 +83,13 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <Label Content="Source" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="0"/>
-                    <UI:FolderPicker Text="{Binding Path=Settings.SourceDir, Mode=TwoWay}"
-                        HorizontalAlignment="Stretch" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="0"/>
+                    <Label Content="Source" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="0" />
+                    <UI:FolderPicker Text="{Binding Path=Settings.SourceDir, Mode=TwoWay}" Grid.Column="1" Grid.Row="0"/>
 
                     <Label Content="Target" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="1"/>
-                    <UI:FolderPicker Text="{Binding Path=Settings.TargetDir}"
-                        HorizontalAlignment="Stretch" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1"/>
+                    <UI:FolderPicker Text="{Binding Path=Settings.TargetDir, Mode=TwoWay}"  Grid.Column="1" Grid.Row="1"/>
 
-                    <CheckBox IsChecked="{Binding Path=Settings.ExcludeFigLeafDir}" Content="Exclude FigLeaf folder" 
+                    <CheckBox IsChecked="{Binding Path=Settings.ExcludeFigLeafDir, Mode=TwoWay}" Content="Exclude FigLeaf folder" 
                         VerticalAlignment="Center" Margin="0,5" Grid.Column="1" Grid.Row="2"/>
                 </Grid>
             </GroupBox>
@@ -145,7 +143,7 @@
 
                     <Label Content="Size in pixels" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="0"/>
                     <xctk:IntegerUpDown 
-                        Value="{Binding Path=Settings.ThumbnailSize}"
+                        Value="{Binding Path=Settings.ThumbnailSize, Mode=TwoWay}"
                         HorizontalAlignment="Left" Width="50" Grid.Column="1" Grid.Row="0" VerticalContentAlignment="Center" Minimum="16" Maximum="256"/>
                 </Grid>
             </GroupBox>
@@ -169,7 +167,7 @@
                         <GroupBox.Header>
                             <StackPanel Orientation="Horizontal" Margin="0,0,0,2">
                                 <TextBlock Text="Log" Margin="0,0,5,0"/>
-                                <CheckBox IsChecked="{Binding Path=Settings.DetailedLogging}" Content="(detailed logging)" VerticalAlignment="Center" />
+                                <CheckBox IsChecked="{Binding Path=Settings.DetailedLogging, Mode=TwoWay}" Content="(detailed logging)" VerticalAlignment="Center" />
                             </StackPanel>
                         </GroupBox.Header>
 
