--- a/FigLeaf.UI/MainWindow.xaml
+++ b/FigLeaf.UI/MainWindow.xaml
@@ -95,8 +95,8 @@
                         <ColumnDefinition Width="130"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions >
-                        <RowDefinition/>
+                    <Grid.RowDefinitions>
+                        <RowDefinition MinHeight="25"/>
                         <RowDefinition MinHeight="25"/>
                         <RowDefinition MinHeight="25"/>
                         <RowDefinition MinHeight="25"/>
@@ -106,7 +106,7 @@
                         Visibility="{Binding IsChecked, ElementName=chbMultipleFolders, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
                     <CheckBox IsChecked="{Binding Path=Settings.HasMultipleDirs, Mode=TwoWay}" Content="{x:Static CoreProperties:Resources.Ui_Folders_HasMultiple}" 
-                        VerticalAlignment="Center" Margin="0,5" Grid.Column="1" Grid.Row="0" Name="chbMultipleFolders" HorizontalAlignment="Right" Width="550"/>
+                        VerticalAlignment="Center"  HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" Name="chbMultipleFolders"/>
 
                     <Label Content="{x:Static CoreProperties:Resources.Ui_Folders_Source}" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="1"
                         Visibility="{Binding IsChecked, ElementName=chbMultipleFolders, Converter={StaticResource OppositeBooleanToVisibilityConverter}}"/>
@@ -119,7 +119,7 @@
                         Visibility="{Binding IsChecked, ElementName=chbMultipleFolders, Converter={StaticResource OppositeBooleanToVisibilityConverter}}"/>
 
                     <CheckBox IsChecked="{Binding Path=Settings.ExcludeFigLeafDir, Mode=TwoWay}" Content="{x:Static CoreProperties:Resources.Ui_Folders_ExcludeFigLeafDir}" 
-                        VerticalAlignment="Center" Margin="0,5" Grid.Column="1" Grid.Row="3"
+                        VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="3"
                         Visibility="{Binding IsChecked, ElementName=chbMultipleFolders, Converter={StaticResource OppositeBooleanToVisibilityConverter}}"/>
 
                     <DataGrid Grid.Row="1" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="2" Name="grDirs"
